--- a/store.html
+++ b/store.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
   <meta charset="utf-8" />
-  <title>A Colher - Home</title>
+  <title>A Colher - Store</title>
   <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
   <link rel="stylesheet" href="css/styles.css" />
 </head>
@@ -39,39 +39,6 @@
         </td>
       </tr>
     </table>
-    <div>
-      <img
-        id="home_photo"
-        src="images/home_photo_1.jpg"
-        alt="home_photo_1"
-        width="480px"
-        height="300px"
-      />
-      <img
-        id="home_photo"
-        src="images/home_photo_2.jpg"
-        alt="home_photo_2"
-        width="480px"
-        height="300px"
-      />
-      <img
-        id="home_photo"
-        src="images/home_photo_3.jpg"
-        alt="home_photo_3"
-        width="480px"
-        height="300px"
-      />
-      <img
-        id="home_photo"
-        src="images/home_photo_4.jpg"
-        alt="home_photo_4"
-        width="480px"
-        height="300px"
-      />
-      <div id="welcome">
-        <p id="welcome">Welcome to A Colher!<br />Bem-vindo em A Colher!</p>
-      </div>
-    </div>
     <footer>
       <p>&copy; 2022 <a href="home.html">A Colher</a></p>
     </footer>
