home page correction

--- a/Home.html
+++ b/Home.html
@@ -39,7 +39,7 @@
         </td>
       </tr>
     </table>
-    <div>
+    <div id="home_photos">
       <img
         id="home_photo"
         src="images/home_photo_1.jpg"
