--- a/home.html
+++ b/home.html
@@ -39,7 +39,7 @@
         </td>
       </tr>
     </table>
-    <div id="home_photos">
+    <div id="photos">
       <img
         id="home_photo"
         src="images/home_photo_1.jpg"
