--- a/photo_gallery.html
+++ b/photo_gallery.html
@@ -15,30 +15,64 @@
           /></a>
         </td>
         <td id="navbar">
-          <ul class="nav">
-            <li>
-              <a href="about.html">About</a>
-            </li>
-            <li><a href="menu.html">Menu</a></li>
-            <li>
-              <a href="photo_gallery.html">Photo Gallery</a>
-            </li>
-            <li>
-              <a href="store.html">Store</a>
-            </li>
-            <li>
-              <a href="events.html">Events</a>
-            </li>
-            <li>
-              <a href="news.html">News</a>
-            </li>
-            <li>
-              <a href="contact.html">Contact</a>
-            </li>
-          </ul>
+          <div class="navbar">
+            <div class="dropdown">
+              <button class="dropbtn">Restaurant</button>
+              <div class="dropdown-content">
+                <a href="about.html">About</a>
+                <a href="menu.html">Menu</a>
+              </div>
+            </div>
+            <div class="dropdown">
+              <button class="dropbtn">Products</button>
+              <div class="dropdown-content">
+                <a href="photo_gallery.html">Photo Gallery</a>
+                <a href="store.html">Store</a>
+              </div>
+            </div>
+            <div class="dropdown">
+              <button class="dropbtn">Events & News</button>
+              <div class="dropdown-content">
+                <a href="events.html">Events</a>
+                <a href="news.html">News</a>
+              </div>
+            </div>
+            <a href="contact.html">Contact</a>
+          </div>
         </td>
       </tr>
     </table>
+    <div id="photos">
+      <h1>Photo Gallery of Portuguese food</h1>
+      <img
+        id="home_photo"
+        src="images/photo_gallery_1.jpg"
+        alt="photo_gallery_1"
+        width="480px"
+        height="300px"
+      />
+      <img
+        id="home_photo"
+        src="images/photo_gallery_2.jpg"
+        alt="photo_gallery_2"
+        width="480px"
+        height="300px"
+      />
+      <img
+        id="home_photo"
+        src="images/photo_gallery_3.jpg"
+        alt="photo_gallery_3"
+        width="480px"
+        height="300px"
+      />
+      <img
+        id="home_photo"
+        src="images/photo_gallery_4.jpg"
+        alt="photo_gallery_4"
+        width="480px"
+        height="300px"
+      />
+    </div>
     <footer>
       <p>&copy; 2022 <a href="home.html">A Colher</a></p>
     </footer>
