--- a/store.html
+++ b/store.html
@@ -15,30 +15,92 @@
           /></a>
         </td>
         <td id="navbar">
-          <ul class="nav">
-            <li>
-              <a href="about.html">About</a>
-            </li>
-            <li><a href="menu.html">Menu</a></li>
-            <li>
-              <a href="photo_gallery.html">Photo Gallery</a>
-            </li>
-            <li>
-              <a href="store.html">Store</a>
-            </li>
-            <li>
-              <a href="events.html">Events</a>
-            </li>
-            <li>
-              <a href="news.html">News</a>
-            </li>
-            <li>
-              <a href="contact.html">Contact</a>
-            </li>
-          </ul>
+          <div class="navbar">
+            <div class="dropdown">
+              <button class="dropbtn">Restaurant</button>
+              <div class="dropdown-content">
+                <a href="about.html">About</a>
+                <a href="menu.html">Menu</a>
+              </div>
+            </div>
+            <div class="dropdown">
+              <button class="dropbtn">Products</button>
+              <div class="dropdown-content">
+                <a href="photo_gallery.html">Photo Gallery</a>
+                <a href="store.html">Store</a>
+              </div>
+            </div>
+            <div class="dropdown">
+              <button class="dropbtn">Events & News</button>
+              <div class="dropdown-content">
+                <a href="events.html">Events</a>
+                <a href="news.html">News</a>
+              </div>
+            </div>
+            <a href="contact.html">Contact</a>
+          </div>
         </td>
       </tr>
     </table>
+    <div>
+      <h1>Souvenir Store</h1>
+      <table id="store">
+        <tr>
+          <td>
+            <img
+              id="store_photo"
+              src="images/store_photo_1.jpg"
+              alt="store_photo_1"
+              width="300px"
+              height="300px"
+            />
+          </td>
+          <td style="padding: 20px">
+            <h3>"Say it in Portuguese" Mug</h3>
+            <br />
+            <p>5.00 €</p>
+            <br />
+            <button>Buy</button>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <img
+              id="store_photo"
+              src="images/store_photo_2.jpg"
+              alt="store_photo_2"
+              width="300px"
+              height="300px"
+            />
+          </td>
+          <td style="padding: 20px">
+            <h3>Portuguese Key ring</h3>
+            <br />
+            <p>2.00 €</p>
+            <br />
+            <button>Buy</button>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <img
+              id="store_photo"
+              src="images/store_photo_3.jpg"
+              alt="store_photo_3"
+              width="300px"
+              height="300px"
+            />
+          </td>
+          <td style="padding: 20px">
+            <h3>Portuguese Tee-shirt</h3>
+            <br />
+            <p>4.00 €</p>
+            <br />
+            <button>Buy</button>
+          </td>
+        </tr>
+      </table>
+    </div>
     <footer>
       <p>&copy; 2022 <a href="home.html">A Colher</a></p>
     </footer>
