--- a/home.html
+++ b/home.html
@@ -15,27 +15,30 @@
           /></a>
         </td>
         <td id="navbar">
-          <ul class="nav">
-            <li>
-              <a href="about.html">About</a>
-            </li>
-            <li><a href="menu.html">Menu</a></li>
-            <li>
-              <a href="photo_gallery.html">Photo Gallery</a>
-            </li>
-            <li>
-              <a href="store.html">Store</a>
-            </li>
-            <li>
-              <a href="events.html">Events</a>
-            </li>
-            <li>
-              <a href="news.html">News</a>
-            </li>
-            <li>
-              <a href="contact.html">Contact</a>
-            </li>
-          </ul>
+          <div class="navbar">
+            <div class="dropdown">
+              <button class="dropbtn">Restaurant</button>
+              <div class="dropdown-content">
+                <a href="about.html">About</a>
+                <a href="menu.html">Menu</a>
+              </div>
+            </div>
+            <div class="dropdown">
+              <button class="dropbtn">Products</button>
+              <div class="dropdown-content">
+                <a href="photo_gallery.html">Photo Gallery</a>
+                <a href="store.html">Store</a>
+              </div>
+            </div>
+            <div class="dropdown">
+              <button class="dropbtn">Events & News</button>
+              <div class="dropdown-content">
+                <a href="events.html">Events</a>
+                <a href="news.html">News</a>
+              </div>
+            </div>
+            <a href="contact.html">Contact</a>
+          </div>
         </td>
       </tr>
     </table>
