--- a/menu.html
+++ b/menu.html
@@ -15,30 +15,94 @@
           /></a>
         </td>
         <td id="navbar">
-          <ul class="nav">
-            <li>
-              <a href="about.html">About</a>
-            </li>
-            <li><a href="menu.html">Menu</a></li>
-            <li>
-              <a href="photo_gallery.html">Photo Gallery</a>
-            </li>
-            <li>
-              <a href="store.html">Store</a>
-            </li>
-            <li>
-              <a href="events.html">Events</a>
-            </li>
-            <li>
-              <a href="news.html">News</a>
-            </li>
-            <li>
-              <a href="contact.html">Contact</a>
-            </li>
-          </ul>
+          <div class="navbar">
+            <div class="dropdown">
+              <button class="dropbtn">Restaurant</button>
+              <div class="dropdown-content">
+                <a href="about.html">About</a>
+                <a href="menu.html">Menu</a>
+              </div>
+            </div>
+            <div class="dropdown">
+              <button class="dropbtn">Products</button>
+              <div class="dropdown-content">
+                <a href="photo_gallery.html">Photo Gallery</a>
+                <a href="store.html">Store</a>
+              </div>
+            </div>
+            <div class="dropdown">
+              <button class="dropbtn">Events & News</button>
+              <div class="dropdown-content">
+                <a href="events.html">Events</a>
+                <a href="news.html">News</a>
+              </div>
+            </div>
+            <a href="contact.html">Contact</a>
+          </div>
         </td>
       </tr>
     </table>
+    <div>
+      <h1>Menu of the day</h1>
+      <h2>Lunch</h2>
+      <h3>Starter</h3>
+      <p id="paragraph">Rissóis de camarão (Shrimp rissoles)</p>
+      <img
+        id="menu_photo"
+        src="images/lunch_starter.jpg"
+        alt="lunch_starter"
+        width="480px"
+        height="300px"
+      />
+      <h3>Main course</h3>
+      <p id="paragraph">
+        Bacalhau à bras (Codfish with onions and thinly chopped fried potatoes)
+      </p>
+      <img
+        id="menu_photo"
+        src="images/lunch_main_course.jpg"
+        alt="lunch_starter"
+        width="480px"
+        height="300px"
+      />
+      <h3>Dessert</h3>
+      <p id="paragraph">Baba de camelo (Caramel mousse)</p>
+      <img
+        id="menu_photo"
+        src="images/lunch_dessert.jpg"
+        alt="lunch_starter"
+        width="480px"
+        height="300px"
+      />
+      <h2>Dinner</h2>
+      <h3>Starter</h3>
+      <p id="paragraph">Caldo verde (Green broth soup)</p>
+      <img
+        id="menu_photo"
+        src="images/dinner_starter.jpg"
+        alt="lunch_starter"
+        width="480px"
+        height="300px"
+      />
+      <h3>Main course</h3>
+      <p id="paragraph">Espetadas de vitela (Veal kebabs)</p>
+      <img
+        id="menu_photo"
+        src="images/dinner_main_course.jpg"
+        alt="lunch_starter"
+        width="480px"
+        height="300px"
+      />
+      <h3>Dessert</h3>
+      <p id="paragraph">Pastéis de nata (Egg custard tart pastry)</p>
+      <img
+        id="menu_photo"
+        src="images/dinner_dessert.jpg"
+        alt="lunch_starter"
+        width="480px"
+        height="300px"
+      />
+    </div>
     <footer>
       <p>&copy; 2022 <a href="home.html">A Colher</a></p>
     </footer>
