text and style corrections

--- a/events.html
+++ b/events.html
@@ -44,7 +44,7 @@
     </table>
     <div>
       <h1>Events</h1>
-      <h2>Tuesday night</h2>
+      <h2>New Year's Eve</h2>
       <p id="paragraph">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ac purus
         sit amet felis consectetur feugiat in eu risus. In sagittis quam sed
@@ -74,7 +74,7 @@
         ut cursus magna dapibus. Class aptent taciti sociosqu ad litora torquent
         per conubia nostra, per inceptos himenaeos.
       </p>
-      <h2>Thursday night</h2>
+      <h2>Halloween</h2>
       <p id="paragraph">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque id
         pharetra urna. Etiam ultricies ornare ligula hendrerit mollis. Donec
@@ -110,7 +110,7 @@
         purus. Donec porttitor consectetur pellentesque. Cras pharetra arcu a
         augue efficitur blandit.
       </p>
-      <h2>Saturday night</h2>
+      <h2>Christmas Eve</h2>
       <p id="paragraph">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin dapibus
         elit vitae sem maximus, sit amet tempor nunc feugiat. Vestibulum lorem
