--- a/store.html
+++ b/store.html
@@ -55,7 +55,7 @@
               height="300px"
             />
           </td>
-          <td style="padding: 20px">
+          <td id="price">
             <h3>"Say it in Portuguese" Mug</h3>
             <br />
             <p>5.00 €</p>
@@ -73,7 +73,7 @@
               height="300px"
             />
           </td>
-          <td style="padding: 20px">
+          <td id="price">
             <h3>Portuguese Key ring</h3>
             <br />
             <p>2.00 €</p>
@@ -91,10 +91,10 @@
               height="300px"
             />
           </td>
-          <td style="padding: 20px">
+          <td id="price">
             <h3>Portuguese Tee-shirt</h3>
             <br />
-            <p>4.00 €</p>
+            <p>14.00 €</p>
             <br />
             <button>Buy</button>
           </td>
