--- a/menu.html
+++ b/menu.html
@@ -46,7 +46,7 @@
       <h1>Menu of the day</h1>
       <h2>Lunch</h2>
       <h3>Starter</h3>
-      <p id="paragraph">Rissóis de camarão (Shrimp rissoles)</p>
+      <p>Rissóis de camarão (Shrimp rissoles)</p>
       <img
         id="menu_photo"
         src="images/lunch_starter.jpg"
@@ -55,7 +55,7 @@
         height="300px"
       />
       <h3>Main course</h3>
-      <p id="paragraph">
+      <p>
         Bacalhau à bras (Codfish with onions and thinly chopped fried potatoes)
       </p>
       <img
@@ -66,7 +66,7 @@
         height="300px"
       />
       <h3>Dessert</h3>
-      <p id="paragraph">Baba de camelo (Caramel mousse)</p>
+      <p>Baba de camelo (Caramel mousse)</p>
       <img
         id="menu_photo"
         src="images/lunch_dessert.jpg"
@@ -76,7 +76,7 @@
       />
       <h2>Dinner</h2>
       <h3>Starter</h3>
-      <p id="paragraph">Caldo verde (Green broth soup)</p>
+      <p>Caldo verde (Green broth soup)</p>
       <img
         id="menu_photo"
         src="images/dinner_starter.jpg"
@@ -85,7 +85,7 @@
         height="300px"
       />
       <h3>Main course</h3>
-      <p id="paragraph">Espetadas de vitela (Veal kebabs)</p>
+      <p>Espetadas de vitela (Veal kebabs)</p>
       <img
         id="menu_photo"
         src="images/dinner_main_course.jpg"
@@ -94,7 +94,7 @@
         height="300px"
       />
       <h3>Dessert</h3>
-      <p id="paragraph">Pastéis de nata (Egg custard tart pastry)</p>
+      <p>Pastéis de nata (Egg custard tart pastry)</p>
       <img
         id="menu_photo"
         src="images/dinner_dessert.jpg"
